--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,10 +1,16 @@
 ﻿@page "/"
 
-<PageTitle>Teacher Digital Agency</PageTitle>
+<!--  -->
 
-<Content Class="flex h-screen">
-      <div class="text-center m-auto">
-            <Header Class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Hello TdA</Header>
-            <Paragraph Class="mt-6 text-lg leading-8 text-gray-600">Educating the Future. Teacher Digital Agency - Expanding the Horizons of Learning. Currently Under Construction, Return Soon to Change the Way You Learn!</Paragraph>
-      </div>
-</Content>
+<PageTitle>Teacher Digital Agency</PageTitle>
+<body>
+    <div class="top-0 h-20 w-full text-white bg-TDAgrey">
+        
+        <div class="flex h-20 text-white font-bold bg-TDAgrey">
+            <div class="w-40 h-20 flex hover:bg-TDAyellow"><p class="m-auto">Databáze</p></div>
+            <div class="w-40 h-20 flex hover:bg-TDAyellow"><p class="m-auto">FAQ</p></div>
+            <div class="w-40 h-20 flex hover:bg-TDAyellow"><p class="m-auto">Kontakty</p></div>
+        </div>
+   
+    </div>
+</body>
