--- a/_Imports.razor
+++ b/_Imports.razor
@@ -2,4 +2,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using TeacherDigitalAgency
+@using TeacherDigitalAgency.Components
 @using AntDesign
