--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,9 +2,44 @@
 
 <PageTitle>Teacher Digital Agency</PageTitle>
 
-<Content Class="flex h-screen">
-      <div class="text-center m-auto">
-            <Header Class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Hello TdA</Header>
-            <Paragraph Class="mt-6 text-lg leading-8 text-gray-600">Educating the Future. Teacher Digital Agency - Expanding the Horizons of Learning. Currently Under Construction, Return Soon to Change the Way You Learn!</Paragraph>
-      </div>
+<Content Class="flex h-screen overflow-hidden">
+
+    <div class="z-50 text-center mt-24 ml-3 w-1/2">
+        <Header Class="z-50 text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Hello TdA</Header>
+        <Paragraph Class="mt-6 text-lg leading-8 text-gray-600">Educating the Future. Teacher Digital Agency - Expanding the Horizons of Learning. Currently Under Construction, Return Soon to Change the Way You Learn!</Paragraph>
+        
+        <form>
+            <label for="location">Lokace:</label><br>
+            <select name="Lokace" id="location">
+                <option value=""></option>
+                <option value="Ostrava">Ostrava</option>
+                <option value="Praha">Praha</option>
+                <option value="Brno">Brno</option>
+            </select><br/>
+
+            <label for="price" class="mt-4">Maximální cena (czk/h):</label><br>
+            <input id="price" type="range" min="0" max="1000" value="500" class="w-3/5 h-2 bg-TDAblue rounded-lg appearance-none cursor-pointer dark:bg-gray-700" oninput="this.nextElementSibling.value = this.value">
+            <output>500</output><a> Kč</a><br/>
+
+            <label for="titles" class="mt-4">Titul:</label><br>
+                <input id="ing" type="checkbox" value="Ing" name="ing">
+                <label for="ing">Ing.</label>
+                <input id="bc" type="checkbox" value="Bc" name="bc">
+                <label for="bc">Bc.</label>
+                <input id="mgr" type="checkbox" value="Mgr" name="mgr">
+                <label for="mgr">Mgr.</label>
+
+            <br/>
+
+        <input type="submit" value="Vyhledat" Class="m-auto mt-8 bg-TDAyellow hover:bg-TDAyellowDark rounded-tl-3xl rounded-br-3xl h-[23] w-[95] p-3 pt-1 font-bold text-white text-2xl">
+        
+        </form>
+
+    </div>   
+    <div class="-z-10 absolute w-full h-full top-0 right-0">
+        <a Class="absolute w-[70%] right-0 bg-right h-screen bg-contain bg-no-repeat bg-[url('/stock1.png')]"></a>
+    </div>
+
+
+
 </Content>
