--- a/Components/Navbar.razor
+++ b/Components/Navbar.razor
@@ -1,15 +1,5 @@
-﻿<nav class="fixed flex top-0 h-10 w-full text-white font-bold bg-TDAgrey">
-    <!-- TODO: Vlevo má být ikona (viz. screenshoty jednotlivého učitele), a potom linky dát doprava -->
-    
-    <a class="transition ease-in-out w-28 h-full flex hover:bg-TDAyellow" href="#">
-        <p class="m-auto">Databáze</p>
+﻿<Header Class="fixed flex justify-between z-10 w-full bg-transparent h-14">
+    <a class="h-90p my-auto" href="/">
+        <Image Height="100%" Src="images/logos/TeacherDigitalAgency_LOGO_colour-black.svg" Alt="Logo" Preview="false" />
     </a>
-    
-    <a class="transition ease-in-out w-28 h-full flex hover:bg-TDAyellow" href="#">
-        <p class="m-auto">FAQ</p>
-    </a>
-    
-    <a class="transition ease-in-out w-28 h-full flex hover:bg-TDAyellow" href="#">
-        <p class="m-auto">Kontakty</p>
-    </a>
-</nav>
+</Header>
