--- a/MainLayout.razor
+++ b/MainLayout.razor
@@ -1,5 +1,13 @@
 ﻿@inherits LayoutComponentBase
 
-<Navbar/>
-
-<main> @Body </main>
+<Layout>
+    <Navbar/>
+    
+    <!---<main class="pt-14"> @Body </main>--->
+    
+    <main>
+        @Body
+    </main>
+    
+    <Footless/>
+</Layout>
