--- a/Styles/site.css
+++ b/Styles/site.css
@@ -1,6 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Lalezar&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'Lalezar', system-ui;
+}
+
+@font-face {
+    font-family: 'Open Sans', sans-serif;
+}
+
+* {
+    font-family: 'Lalezar', system-ui;
+}
 
 #blazor-error-ui {
     background: lightyellow;
@@ -29,4 +44,8 @@
 
 .blazor-error-boundary::after {
     content: "An error has occurred."
+}
+
+.text-outline {
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
