--- a/_Imports.razor
+++ b/_Imports.razor
@@ -1,6 +1,6 @@
-﻿@using Microsoft.AspNetCore.Components.Routing
+﻿@using AntDesign
+@using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using TeacherDigitalAgency
 @using TeacherDigitalAgency.Components
-@using AntDesign
